Posting Date - User registration date - Mail activation
Messages posted with correct asked date.
Possibility to definy a registration date if we decide to add a new
user.
Welcome message modified.

Les messages sont désormais postés avec les bonnes dates.
Il est possible de définir une date d'enregistrement lorsque l'on a
décidé d'ajouter un nouveau membre.
Mail de bienvenue modifié.

--- a/language/en/email/user_postingform_welcome.txt
+++ b/language/en/email/user_postingform_welcome.txt
@@ -2,6 +2,8 @@ Subject: Welcome to "{SITENAME}"
 
 {WELCOME_MSG}
 
+We are happy to let you know your registration on « {SITENAME} » was successful.
+
 Please keep this email for your records. Your account information is as follows:
 
 ----------------------------
